Cleaned up UI, added some DnD